--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,6 @@ html {
 .main {
 	margin-left: 100px;
 	margin-right: 100px;
-	border-color: blue;
-	border: 2px;
 }
 .header {
 	background-color: #39d7ff;
@@ -25,6 +23,7 @@ html {
 	color: inherit;
 	background-color: #E8E8E8;
 	border-radius: 18px;
+	box-shadow: 4px 4px 8px silver;
 }
 .jumbotron h1,
 .jumbotron .h1 {
@@ -61,11 +60,8 @@ a:hover {
 	-webkit-user-select: none;
 	   -moz-user-select: none;
    	 	-ms-user-select: none;
- 	        user-select: none;
-	background-image: none;
 	border: 1px solid transparent;
 	border-radius: 4px;
-
 }
 .button-blue {
 	color: #fff;
@@ -75,6 +71,45 @@ a:hover {
 .button-blue:hover,
 .button-blue:active {
 	text-decoration: none;
+	background-color: #5bc0de;
+  	border-color: #46b8da;
+}
+.header-cont {
+	margin-top: 16.5px;
+	margin-left: 20px;
+}
+.placeholder {
+	margin-top: 50px;
+}
+.login {
+	border-radius: 5px;
+	border: 1px solid;
+	border-color: black;
+	height: 23px;
+	width: 150px;
+	padding-left: 3px;
+	padding-right: 3px;
+	display: inline-block;
+}
+.login-submit {
+	display: inline-block;
+	font-size: 15px;
+	font-weight: bold;
+	text-align: center;
+	vertical-align: middle;
+	cursor: pointer;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	height: 23px;
+	color: #fff;
+	background-color: #3071a9;
+	border-color: #285e8e;
+	margin-bottom: 1px;
+	line-height: 0.5;
+}
+input[type="submit"]::-moz-focus-inner { border: 0; }
+.login-submit:hover,
+.login-submit:active, {
 	background-color: #5bc0de;
   	border-color: #46b8da;
 }
