--- a/css/login.css
+++ b/css/login.css
@@ -39,7 +39,6 @@ a:hover {
 	cursor: pointer;
 }
 .button {
-	display: inline-block;
 	padding: 6px 12px;
 	font-size: 20px;
 	font-weight: bold ;
@@ -105,11 +104,17 @@ a:hover {
 	border: none;
 	box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1) inset;
 }
-img {
+.logo {
 	width: 150px;
 	height: 150px;
 	margin-bottom: 30px;
 	margin-top: -60px;
+}
+.caption {
+	text-align: center;
+	letter-spacing: 5px;
+	font-size: 75px;
+	margin-bottom: 15px;
 }
 /* Löschung der Mozilla-Button-Grundeinstellung */
 input[type="submit"]::-moz-focus-inner,
